tests/compile_fail/invalid_max_transitions.c
#define MFSM_MAX_TRANSITIONS -1
#include "mfsm.h"

int main(void)
{
    return 0;
}
